BMSSimplificationEclipseWS/zEUFULL-NonImpactfulItems/src/objects/EM_Vendor_vod__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number_HCPTS__c</fullName>
        <description>Payee Account Number</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_Address_Line_2_HCPTS__c</fullName>
        <description>Payee Address Line 2</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_District_HCPTS__c</fullName>
        <description>Payee District copied over from ICF</description>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_Type_HCPTS__c</fullName>
        <description>Field to indicate if the Payee is an Individual or Entity</description>
        <inlineHelpText>Field to indicate if the Payee is an Individual or Entity</inlineHelpText>
        <label>Payee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Party_is_HCP_HCPTS__c</fullName>
        <label>Payee is HCP HCPTS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_State_HCPTS__c</fullName>
        <description>Payee State/Province</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Tax_ID_HCPTS__c</fullName>
        <description>Payee Tax ID</description>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERS_Simple_HCPTS__c</fullName>
        <description>Indicates Invoice type - fed from SAP</description>
        <inlineHelpText>Indicates Invoice type - fed from SAP</inlineHelpText>
        <label>ERS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Code_HCPTS__c</fullName>
        <label>Industry Code</label>
        <picklist>
            <picklistValues>
                <fullName>0100-HCP(Individual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0101-HCO (Entity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0102-Non-HCP (Individual or Entity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PII_Data_HCPTS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contains PII Data which will be encrypted using Force.com Platform Encryption. Preceding ICF Field API names with letters PII_ will ensure that Process Payee button copies the values from ICF to matching fields on this reference object</description>
        <inlineHelpText>Contains PII Data which will be encrypted using Force.com Platform Encryption. Preceding ICF Field API names with letters PII_ will ensure that Process Payee button copies the values from ICF to matching fields on this reference object</inlineHelpText>
        <label>PII Data</label>
        <referenceTo>PII_Data_HCPTS__c</referenceTo>
        <relationshipName>Contract_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Material_Group_HCPTS__c</fullName>
        <label>Primary Material Group</label>
        <picklist>
            <controllingField>Industry_Code_HCPTS__c</controllingField>
            <picklistValues>
                <fullName>HCPT01 (HCP Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCPT03 (HCP Sponsorship)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCPT02 (Event Sponsorship)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITRD09 (Educatoinal Grants)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMS23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMS04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMS22</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Reference_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider Reference</label>
        <referenceTo>EM_Speaker_vod__c</referenceTo>
        <relationshipLabel>Payees</relationshipLabel>
        <relationshipName>Payees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Used to determine if a vendor is eligible for use. Custom values can be added, though only eligible vendors can be selected for events.</description>
        <label>Payee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Eligible_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Registration_ID_HCPTS__c</fullName>
        <description>VAT Registration ID</description>
        <label>VAT Registration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Mat_Group_Concat_HCPTS__c</fullName>
        <formula>LEFT(Text(Primary_Material_Group_HCPTS__c),6) &amp; &quot;, &quot; &amp;  IF( INCLUDES(Secondary_Material_Group_2_HCPTS__c,&quot;HCPT01 (HCP Services)&quot;), &quot;HCPT01&quot;,&quot;&quot;)&amp; &quot;, &quot; &amp; IF( INCLUDES(Secondary_Material_Group_2_HCPTS__c,&quot;HCPT02 (Event Sponsorship)&quot;), &quot;HCPT02&quot;,&quot;&quot;)&amp; &quot;, &quot; &amp; IF( INCLUDES(Secondary_Material_Group_2_HCPTS__c,&quot;ITRD09 (Educational Grants)&quot;), &quot;ITRD09&quot;,&quot;&quot;)&amp; &quot;, &quot; &amp; IF( INCLUDES(Secondary_Material_Group_2_HCPTS__c,&quot;HCPT03 (HCP Sponsorship)&quot;), &quot;HCPT03&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Mat. Group Concat</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Payee_Simple_HCPTS</fullName>
        <active>true</active>
        <description>Simple Payee</description>
        <label>Payee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_vod</fullName>
        <active>true</active>
        <description>Vendor</description>
        <label>Vendor_vod</label>
    </recordTypes>
    <validationRules>
        <fullName>BMS_EMEA_EM_Vendor_ID_Must_be_ten_digits</fullName>
        <active>true</active>
        <description>This validation rule is to have the 10 digists in the SAP vendor id on Payee</description>
        <errorConditionFormula>AND (LEN( Vendor_ID_HCPTS__c ) &lt;&gt; 10 , LEN( Vendor_ID_HCPTS__c ) &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Vendor_ID_HCPTS__c</errorDisplayField>
        <errorMessage>SAP Vendor ID Must be 10 Digits</errorMessage>
    </validationRules>
</CustomObject>